# debinstaller

./: .gitignore  CMakeLists.txt  README.md  cutefish-debinstaller.desktop
debian/: changelog  control  copyright  postinst
qml/: AppPage.qml  HomePage.qml  InstallPage.qml  main.qml
src/: debinstaller.cpp  debinstaller.h  main.cpp
translations/: en_US.ts  zh_CN.ts
